--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,5 +1,10 @@
 <% layout("/layouts/boilerplate") %>
-
+<style>
+    .login-btn {
+        background-color: #fe424d !important;
+        border: none !important;
+    }
+</style>
 <div class="row mt-3">
     <h1 class="col-6 offset-3">Login on WanderLust</h1>
     <div class="col-6 offset-3">
@@ -28,7 +33,7 @@
                 />
             </div>
 
-            <button type="submit" class="btn btn-dark"> Login </button>
+            <button type="submit" class="btn btn-dark login-btn"> Login </button>
         </form>
     </div>
 </div>
