--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,5 +1,10 @@
 <% layout("/layouts/boilerplate") %>
-
+<style>
+    .signup-btn {
+        background-color: #fe424d !important;
+        border: none !important;
+    }
+</style>
 <div class="row mt-3">
     <h1 class="col-6 offset-3">SignUp on WanderLust</h1>
     <div class="col-6 offset-3">
@@ -40,7 +45,7 @@
                 />
             </div>
 
-            <button type="submit" class="btn btn-dark"> Sign Up</button>
+            <button type="submit" class="btn btn-dark signup-btn"> Sign Up</button>
         </form>
     </div>
 </div>
